tests/src/type-error/inv-numeric.stau
f :: Int -> Int
f x = x + True

main = f 5

